# agio

./: .gitignore  Cargo.toml  README.md
.github/: CODEOWNERS
.github/workflows/: rust.yml
examples/: web_server.rs
src/: agent.rs  client.rs  config.rs  error.rs  lib.rs  models.rs  persistence.rs  server.rs  tools.rs  utils.rs  websocket_client.rs
src/persistence/: memory.rs  postgres.rs
tests/: integration_test.rs  persistence_test.rs
